@@ -151,7 +151,7 @@
 #if __cplusplus > 201703L
 // c++2a
 #define __cpp_lib_atomic_ref 201806L
-#define __cpp_lib_bind_front 201902L
+#define __cpp_lib_bind_front 201907L
 #define __cpp_lib_bounded_array_traits 201902L
 #if __cpp_impl_destroying_delete
 # define __cpp_lib_destroying_delete 201806L
